tweak to correct how site renders on Firefox browser

--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-
+.jumbotron{
+  text-align: center;
 {
   padding: 0;
   margin: 0;
